1871
Iulian (since I'm guessing this will end up yours) here is my quick hack patch which I'm not going to apply.  It does appear to fix the issue, possibly breaking lots of other stuff in the process - I haven't tested it except to confirm that this code would no longer compile.
{code}
$$ scalac a.scala 
a.scala:5: error: constructor parameter p conflicts with member in parent.
class Aclass (p: Int) extends TBase { def g{ f(p) } }
              ^
one error found
{code}
So it's attached in case it can save you any time.
